--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<link rel="stylesheet" type="text/css" href="https://pocockr.github.io/style.css">
 <html lang="en">
 
 	<head>
@@ -104,7 +104,6 @@
 	<script src="externalScript.js"></script> <!--Link to exteernal javascript file --> 
 	
 	 <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="js/jquery.csvToTable.js"></script>
     <script type="text/javascript" src="js/jquery.tablesorter.dev.js"></script>
 	
 	</body>
