--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="https://pocockr.github.io/style.css">
+<link rel="stylesheet" type="text/css" href="https://pocockr.github.io/External.css">
 <html lang="en">
 
 	<head>
