--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</div>
 				 
 
-	</div id="photo"><img src="Premier_League_original.JPG" alt ="EPL pic" width="50%"></div><!-- I just added this to take up space -->
+	</div id="photo"><img src="Premier_League_originalOne.JPG" alt ="EPL pic" width="50%"></div><!-- I just added this to take up space -->
 		
 		
 				
